Update .gitlab-ci.yml file
Former-commit-id: 322e87a374a117859bb3842a33ff24184852837e

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,7 @@ compile_deb:
       - ./.config
       - ./vmlinux
       - ./linux-*
+      - ./arch/x86/boot/bzImage
 
 compile_tar:
   tags: ["docker"]
@@ -37,3 +38,4 @@ compile_tar:
       - .config
       - vmlinux
       - ./*.tar
+      - ./arch/x86/boot/bzImage
