--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -69,6 +69,7 @@ patch_job:
       - $CI_COMMIT_TAG.patch
 
 upload_job:
+  tags: ["docker"]
   stage: upload
   image: curlimages/curl:latest
   rules:
@@ -81,6 +82,7 @@ upload_job:
     - 'curl --header "JOB-TOKEN: ${CI_JOB_TOKEN}" --upload-file $CI_COMMIT_TAG.patch "${PACKAGE_REGISTRY_URL}/${CI_COMMIT_TAG}.patch"'
 
 release_job:
+  tags: ["docker"]
   stage: release
   image: registry.gitlab.com/gitlab-org/release-cli:latest
   variables:
