--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,11 +21,12 @@ jobs:
 
       - name: Build
         run: |
-          make  defconfig rob.config memorizer.config
+          make  defconfig memorizer.config
           make -j $(expr $(nproc) / 3 + 1)
           make -j $(expr $(nproc) / 3 + 1) modules
           # deb-pkg didn't work. (I didn't save the error.)
-          # make -j $(expr $(nproc) / 3 + 1) deb-pkg
+          make -j $(expr $(nproc) / 3 + 1) deb-pkg
+          cp ../*.deb .
           make -j $(expr $(nproc) / 3 + 1) tar-pkg
 
       - name: Test
@@ -52,7 +53,7 @@ jobs:
             linux-*.tar
             arch/x86_64/boot/bzImage
             ./*.patch
-            ../*.deb
+            ./*.deb
 
       - name: Announce
         if: startsWith(github.ref, 'refs/tags/')
