--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,6 +43,11 @@ jobs:
           git fetch --depth=1 origin tag "$basetag"
           git diff -p "$basetag" "$myref" > "$mytag.patch"
 
+      - name: PDF
+        run: |
+          set -ex
+          make SPHINXDIRS="memorizer" pdfdocs htmldocs
+
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
@@ -54,6 +59,7 @@ jobs:
             arch/x86_64/boot/bzImage
             ./*.patch
             ./*.deb
+            Documentation/output/memorizer/pdf/*.pdf
 
       - name: Announce
         if: startsWith(github.ref, 'refs/tags/')
